--- a/sass/_gallery.sass
+++ b/sass/_gallery.sass
@@ -1,6 +1,6 @@
 .gallery-container
-	width: 80%
-	height: 768px
+	width: 100%
+	height: 100vh
 	position: relative
 	margin: 0 auto
 
@@ -17,19 +17,20 @@
 	.gallery-points
 		position: absolute
 		bottom: 50px
-		left: 15%
+		left: 250px
+		// right: 50%
 		transform: translate(-50%)
 		display: flex
 		list-style: none
 
 		li
-			width: 50px
-			height: 60px
+			width: 60px
+			height: 70px
 			background-color: #fdcb6e
 			cursor: pointer
 			transition: background-color 0.5s ease, border-radius 0.5s ease
 			outline: none
-			font-size: 50px
+			font-size: 60px
 			
 			&.active
 				border-radius: 40%
