--- a/style/style.css
+++ b/style/style.css
@@ -10,8 +10,8 @@ h1 {
 }
 
 .gallery-container {
-  width: 80%;
-  height: 768px;
+  width: 100%;
+  height: 100vh;
   position: relative;
   margin: 0 auto;
 }
@@ -24,19 +24,19 @@ h1 {
 .gallery-container .gallery-points {
   position: absolute;
   bottom: 50px;
-  left: 15%;
+  left: 250px;
   transform: translate(-50%);
   display: flex;
   list-style: none;
 }
 .gallery-container .gallery-points li {
-  width: 50px;
-  height: 60px;
+  width: 60px;
+  height: 70px;
   background-color: #fdcb6e;
   cursor: pointer;
   transition: background-color 0.5s ease, border-radius 0.5s ease;
   outline: none;
-  font-size: 50px;
+  font-size: 60px;
 }
 .gallery-container .gallery-points li.active {
   border-radius: 40%;
